force-app/main/default/objects/Payment_Run_Calendar__c/Payment_Run_Calendar__c.object-meta.xml
<CustomObject>
    <label>Payment Run Calendar</label>
    <nameField>
        <label>Payment Run Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Run Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>