force-app/main/default/objects/Payment_Run_Calendar__c/fields/Batch_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Batch_Numbers__c</fullName>
    <label>Numéros de batch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch15</fullName>
            </value>
            <value>
                <fullName>Batch16</fullName>
            </value>
            <value>
                <fullName>Batch17</fullName>
            </value>
            <value>
                <fullName>Batch18</fullName>
            </value>
            <value>
                <fullName>Batch19</fullName>
            </value>
            <value>
                <fullName>Batch20</fullName>
            </value>
            <value>
                <fullName>Batch21</fullName>
            </value>
            <value>
                <fullName>Batch22</fullName>
            </value>
            <value>
                <fullName>Batch23</fullName>
            </value>
            <value>
                <fullName>Batch24</fullName>
            </value>
            <value>
                <fullName>Batch25</fullName>
            </value>
            <value>
                <fullName>Batch26</fullName>
            </value>
            <value>
                <fullName>Batch27</fullName>
            </value>
            <value>
                <fullName>Batch28</fullName>
            </value>
            <value>
                <fullName>Batch29</fullName>
            </value>
            <value>
                <fullName>Batch30</fullName>
            </value>
            <value>
                <fullName>Batch31</fullName>
            </value>
            <value>
                <fullName>Batch32</fullName>
            </value>
            <value>
                <fullName>Batch33</fullName>
            </value>
            <value>
                <fullName>Batch34</fullName>
            </value>
            <value>
                <fullName>Batch35</fullName>
            </value>
            <value>
                <fullName>Batch36</fullName>
            </value>
            <value>
                <fullName>Batch37</fullName>
            </value>
            <value>
                <fullName>Batch38</fullName>
            </value>
            <value>
                <fullName>Batch39</fullName>
            </value>
            <value>
                <fullName>Batch40</fullName>
            </value>
            <value>
                <fullName>Batch41</fullName>
            </value>
            <value>
                <fullName>Batch42</fullName>
            </value>
            <value>
                <fullName>Batch43</fullName>
            </value>
            <value>
                <fullName>Batch44</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>