force-app/main/default/objects/Payment_Run_Calendar__c/fields/Date_Execution__c.field-meta.xml
<CustomField>
    <fullName>Date_Execution__c</fullName>
    <label>Date d&#39;exécution</label>
    <required>true</required>
    <type>Date</type>
</CustomField>