force-app/main/default/objects/Payment_Run_Calendar__c/fields/Mois__c.field-meta.xml
<CustomField>
    <fullName>Mois__c</fullName>
    <label>Mois</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>