force-app/main/default/objects/Payment_Run_Calendar__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>