force-app/main/default/objects/Payment_Run_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Pays__c</columns>
    <columns>NAME</columns>
    <columns>Annee__c</columns>
    <columns>Mois__c</columns>
    <columns>Date_Execution__c</columns>
    <columns>Planned__c</columns>
    <columns>Batch_Numbers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>